app/javascript/scss/elements/_carousel.scss
.carousel {
  position: relative;
  width: 100%;
  max-width: 900px;

  [data-role="carousel"]:not([style]) {
    aspect-ratio: 900/500;
    overflow: hidden;
  }
}

.carousel__item {
  position: relative;
  background: theme(body);
  overflow: hidden;

  img {
    display: block;
    width: 100%;
    height: 100%;
    background: theme(darker);
    text-indent: 1000 * 1000px;
    aspect-ratio: 900/500;
  }
}

.carousel__actions {
  display: none;
  position: absolute;
  top: $margin * 0.25;
  right: $margin * 0.25;

  .carousel__item:hover & {
    display: flex;
  }

  a {
    margin-right: $margin * 0.125;
  }
}

.carousel__navigation {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  grid-gap: $margin * 0.25;
  margin-top: $margin * 0.25;

  @include media-min(sm) {
    grid-template-columns: repeat(7, 1fr);
  }
}

.carousel__navigation-item {
  display: flex;
  align-items: center;
  justify-content: center;
  position: relative;
  overflow: hidden;
  cursor: pointer;
  border-radius: $border-radius;
  background: theme(darker);
  box-shadow: $shadow;
  aspect-ratio: 1/1;

  @include hover-stack {
    opacity: 0.75;
  }

  &--is-active {
    &::after {
      content: "";
      display: block;
      position: absolute;
      left: 0;
      top: 0;
      width: 100%;
      height: 100%;
      border-radius: $border-radius;
      box-shadow: inset 0 0 0 2px $primary, inset 0 0 0 4px theme(darker);
    }
  }

  img {
    width: 100%;
    height: 100%;
    object-fit: cover;
  }
}

.carousel__navigation-item-video-overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba($black, .5) url("/images/icons/icon-youtube.svg") no-repeat center;
  background-size: 2.5rem;
  filter: saturate(0);
}

.card-carousel {
  position: relative;

  .cards {
    $mask-image: linear-gradient(90deg, rgba($black, 0) 0%, rgba($black, 1) var(--margin), rgba($black, 1) calc(100% - var(--margin)), rgba($black, 0) 100%);
    --margin: #{$margin * 0.125};
    -webkit-mask-image: #{$mask-image};
    mask-image: #{$mask-image};

    @include media-min(md) {
      --margin: #{$margin * 0.25};
    }
  }
}

.card-carousel__control {
  position: absolute;
  top: calc(50% - #{ $margin * 0.25 });
  width: 50px;
  height: 50px;
  padding: 10px;
  border-radius: 50%;
  background: rgba($black, .5);
  transform: translateY(-50%);
  z-index: 3;
  cursor: pointer;

  @include media-min(md) {
    width: 30px;
    height: 30px;
    padding: 0;
    border-radius: 0;
    background: none;
  }

  &:not(.card-carousel__control--disabled):hover,
  &:not(.card-carousel__control--disabled):active {
    svg path {
      fill: $white;
    }
  }

  svg {
    height: 100%;
    width: 100%;
    filter: drop-shadow(0 3px 2px rgba($black, .25));

    path {
      fill: theme(text-color-lightest);
    }
  }

  &--next {
    right: -6vw;

    @include media-min(md) {
      right: -45px;
    }
  }

  &--previous {
    left: -6vw;

    @include media-min(md) {
      left: -45px;
    }
  }

  &--disabled {
    opacity: .25;
    cursor: not-allowed;
  }
}

